src/snapshots/bytelox__compiler__tests__add_numbers.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10.23
- Constant:
    Number: 20.6
- Add
- Return
