src/snapshots/bytelox__compiler__tests__ee_false.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10
- Constant:
    Number: 20
- Equal
- Return
