src/snapshots/bytelox__compiler__tests__gte_false.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10
- Constant:
    Number: 20
- Less
- Not
- Return
