src/snapshots/bytelox__compiler__tests__gte_same.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10
- Constant:
    Number: 10
- Less
- Not
- Return
