src/snapshots/bytelox__compiler__tests__gte_true.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 20
- Constant:
    Number: 10
- Less
- Not
- Return
