src/snapshots/bytelox__compiler__tests__lte_false.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 20
- Constant:
    Number: 10
- Greater
- Not
- Return
