src/snapshots/bytelox__compiler__tests__lte_same.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10
- Constant:
    Number: 10
- Greater
- Not
- Return
