src/snapshots/bytelox__compiler__tests__math.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10.23
- Constant:
    Number: 30
- Constant:
    Number: 20
- Negate
- Multiply
- Subtract
- Return
