src/snapshots/bytelox__compiler__tests__ne_true.snap
---
source: src/compiler.rs
expression: tokens
---
- Constant:
    Number: 10
- Constant:
    Number: 10
- Equal
- Not
- Return
